[gd_scene load_steps=15 format=3 uid="uid://b61lprpvlhi8c"]

[ext_resource type="Script" uid="uid://108pj18k02g2" path="res://addons/simusdev/console/prefabs/ui_console_interface.gd" id="1_oq7w7"]
[ext_resource type="Script" uid="uid://b63uuflcyfsli" path="res://addons/simusdev/ui/SD_UIConrolDynamicSettings.gd" id="2_4hjv0"]
[ext_resource type="Script" uid="uid://bxycsjbmhbgx6" path="res://addons/simusdev/ui/SD_UIControlDrag.gd" id="2_b1316"]
[ext_resource type="PackedScene" uid="uid://iigttmn8ai0p" path="res://addons/simusdev/ui/dynamic/panel.tscn" id="2_oq7w7"]
[ext_resource type="Script" uid="uid://cw8eins00okax" path="res://addons/simusdev/console/SD_ConsoleThemes.gd" id="4_vievh"]
[ext_resource type="PackedScene" uid="uid://cpvew16xiutxp" path="res://addons/simusdev/console/prefabs/ui_console_output.tscn" id="4_xlpwh"]
[ext_resource type="PackedScene" uid="uid://bhknf7eo4vpiu" path="res://addons/simusdev/console/prefabs/ui_toolbar_button.tscn" id="5_bjtgq"]
[ext_resource type="Texture2D" uid="uid://c66x8ddudv66m" path="res://addons/simusdev/Game/icons/ui_icon_settings.png" id="6_n8mr8"]
[ext_resource type="Texture2D" uid="uid://bwopwrnp3rtd0" path="res://addons/simusdev/Game/icons/ui_icon_moregames.png" id="7_yc77v"]
[ext_resource type="PackedScene" uid="uid://bjtllekn7shxu" path="res://addons/simusdev/console/prefabs/ui_console_tips.tscn" id="10_0c7w3"]
[ext_resource type="Script" uid="uid://38osx81mny15" path="res://addons/simusdev/console/SD_NodeConsoleCommands.gd" id="11_74bac"]
[ext_resource type="Script" uid="uid://bptu8uuecjoc5" path="res://addons/simusdev/console/SD_NodeCommandObject.gd" id="12_7dls8"]
[ext_resource type="Script" uid="uid://mtgs568pxn5x" path="res://addons/simusdev/console/SD_NodeCommandObjectBind.gd" id="13_7dls8"]

[sub_resource type="Resource" id="Resource_21h2m"]
script = ExtResource("12_7dls8")
code = "clear"
metadata/_custom_type_script = "uid://bptu8uuecjoc5"

[node name="ui_console_interface" type="Control" node_paths=PackedStringArray("_tips", "_drag", "toolbar_container")]
custom_minimum_size = Vector2(768, 512)
layout_mode = 3
anchors_preset = 0
offset_right = 832.0
offset_bottom = 512.0
script = ExtResource("1_oq7w7")
_tips = NodePath("ui_console_tips")
_drag = NodePath("SE_UIControlDrag")
toolbar_container = NodePath("toolbar/VBoxContainer")
metadata/_edit_vertical_guides_ = [784.0, 0.0]
metadata/_edit_horizontal_guides_ = [471.0, 512.0]

[node name="SD_UIControlDynamicSettings" type="Node" parent="." node_paths=PackedStringArray("sources")]
script = ExtResource("2_4hjv0")
sources = [NodePath("../rect/refrect"), NodePath("../toolbar/refrect")]
metadata/_custom_type_script = "uid://b63uuflcyfsli"

[node name="SE_UIControlDrag" type="Node" parent="." node_paths=PackedStringArray("TARGET_INPUT", "TARGET_DRAG")]
script = ExtResource("2_b1316")
TARGET_INPUT = NodePath("..")
TARGET_DRAG = NodePath("..")
zoom_enabled = true
metadata/_custom_type_script = "uid://bxycsjbmhbgx6"

[node name="SD_ConsoleThemes" type="Node" parent="." node_paths=PackedStringArray("apply_nodes")]
script = ExtResource("4_vievh")
apply_nodes = [NodePath("..")]
metadata/_custom_type_script = "uid://cw8eins00okax"

[node name="panel" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.802)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" parent="panel" instance=ExtResource("2_oq7w7")]
layout_mode = 1

[node name="rect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="refrect" type="ReferenceRect" parent="rect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_color = Color(0, 0, 0, 1)
border_width = 4.0
editor_only = false

[node name="toolbar" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.942
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.255981
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="toolbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="settings" parent="toolbar/VBoxContainer" instance=ExtResource("5_bjtgq")]
layout_mode = 2
icon = ExtResource("6_n8mr8")
expand_icon = true

[node name="tools" parent="toolbar/VBoxContainer" instance=ExtResource("5_bjtgq")]
layout_mode = 2
icon = ExtResource("7_yc77v")
expand_icon = true

[node name="refrect" type="ReferenceRect" parent="toolbar"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_color = Color(0, 0, 0, 1)
border_width = 4.0
editor_only = false

[node name="ui_console_output" parent="." instance=ExtResource("4_xlpwh")]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.942
anchor_bottom = 0.92
offset_left = 2.0
offset_top = 2.0
offset_right = -1.74396
offset_bottom = -0.0400085

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.951
anchor_right = 0.942
anchor_bottom = 1.0
offset_top = 0.0879822
offset_right = 0.255981
placeholder_text = "ENTER COMMAND HERE..."
keep_editing_on_text_submit = true
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
deselect_on_focus_loss_enabled = false

[node name="ui_console_tips" parent="." instance=ExtResource("10_0c7w3")]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.942
offset_right = 0.255981
offset_bottom = 194.0

[node name="SD_NodeConsoleCommands" type="Node" parent="."]
script = ExtResource("11_74bac")
commands = Array[ExtResource("12_7dls8")]([SubResource("Resource_21h2m")])
metadata/_custom_type_script = "uid://38osx81mny15"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="drag_end" from="SE_UIControlDrag" to="." method="_on_se_ui_control_drag_drag_end"]
[connection signal="drag_start" from="SE_UIControlDrag" to="." method="_on_se_ui_control_drag_drag_start"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="tip_selected" from="ui_console_tips" to="." method="_on_ui_console_tips_tip_selected"]
[connection signal="tip_selected_text" from="ui_console_tips" to="." method="_on_ui_console_tips_tip_selected_text"]
[connection signal="on_executed" from="SD_NodeConsoleCommands" to="." method="_on_sd_node_console_commands_on_executed"]
